# ocx-blueprint-package

./: CHANGELOG.md  Makefile  README.md  cookiecutter.json  environment.yaml  tbump.toml
{{ cookiecutter.project_slug }}/: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
{{ cookiecutter.project_slug }}/.github/workflows/: documentation.yaml  python-publish.yaml
{{ cookiecutter.project_slug }}/{{ cookiecutter.__tests }}/: conftest.py
{{ cookiecutter.project_slug }}/{{cookiecutter.__docs}}/: conf.py  modules.rst
{{ cookiecutter.project_slug }}/{{cookiecutter.package_slug}}/: __init__.py
